# reqwest-metrics

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: enable_uri.rs  override_labels.rs  simple.rs
src/: lib.rs
tests/: integration_tests.rs
tests/snapshots/: integration_tests__basic.snap  integration_tests__custom_labels.snap  integration_tests__enable_uri.snap
