[package]
name = "reqwest-metrics"
description = "Metrics.rs integration for reqwest"
version = "0.2.0"
authors = ["Ross Sullivan <rosssullivan101@gmail.com>"]
edition = "2021"
repository = "https://github.com/ranger-ross/reqwest-metrics.git"
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/", "examples/"]

[dependencies]
reqwest-middleware = "0.4"
async-trait = "0.1"
metrics = "0.24"
http = "1"


[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
metrics-util = "0.19.1"
insta = { version = "1.43", features = ["filters"]}
metrics-exporter-prometheus = "0.17.0"
reqwest = "0.12"
